minor_revision_lora_fun
Signed-off-by: Song <xiaosong@amd.com>

--- a/blogs/artificial-intelligence/lora-fundamentals/src/Using-LoRA-for-Efficient-Fine-Tuning-Fundamental-Principles.ipynb
+++ b/blogs/artificial-intelligence/lora-fundamentals/src/Using-LoRA-for-Efficient-Fine-Tuning-Fundamental-Principles.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Using LoRA for Efficient Fine-Tuning: Fundamental Principles \n",
     "\n",
-    "**Author:** {ref}`Sean Song <sean-song>`, AI Software Solutions\\\n",
+    "**Author:** `Sean Song <sean-song>`, AI Software Solutions\\\n",
     "**Read time:** 10 minutes\\\n",
     "**Last edited:** 4 Jan 2024\n",
     "    \n",
@@ -66,12 +66,12 @@
     "\n",
     "Our goal is to train a neural network for the classification of the MNIST database of handwritten digits. We then fine-tune this network to improve its performance for a category in which it doesn't initially perform well.\n",
     "\n",
-    "* Hardware: We use an AMD Instinct GPU with [ROCm](https://github.com/RadeonOpenCompute/ROCm).\n",
+    "* Hardware: We use an AMD Instinct GPU with [ROCm 5.7.0](https://github.com/RadeonOpenCompute/ROCm).\n",
     "* Software: PyTorch, tqdm\n",
     "\n",
     "### Getting started\n",
     "\n",
-    "1. Import the packages. There is no specific version requirement for PyTorch or ROCm."
+    "1. Import the packages."
    ]
   },
   {
@@ -147,7 +147,6 @@
    "outputs": [],
    "source": [
     "# Create an overly expensive neural network to classify MNIST digits\n",
-    "# Daddy got money, so I don't care about efficiency\n",
     "class RichBoyNet(nn.Module):\n",
     "    def __init__(self, hidden_size_1=1000, hidden_size_2=2000):\n",
     "        super(RichBoyNet,self).__init__()\n",
@@ -171,7 +170,7 @@
    "metadata": {},
    "source": [
     "5. Train the network for one epoch to simulate a complete general pre-training on the data. This\n",
-    "    process takes 30 seconds on an AMD Instinct MI250 GPU."
+    "    process takes seconds on an AMD Instinct GPU."
    ]
   },
   {
