Profiler and OpenLLM blogs ---------
Co-authored-by: ffloresy <152216861+ffloresy@users.noreply.github.com>

--- a/blogs/artificial-intelligence/llama2-Qlora/src/LLAMA_2_Fine_Tuning_with_QLoRA.ipynb
+++ b/blogs/artificial-intelligence/llama2-Qlora/src/LLAMA_2_Fine_Tuning_with_QLoRA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enhancing LLM Accessibility: A Deep Dive into QLoRA Through Fine-tuning Llma 2 on a single AMD GPU"
+    "# Enhancing LLM Accessibility: A Deep Dive into QLoRA Through Fine-tuning Llama 2 on a single AMD GPU"
    ]
   },
   {
