--- a/blogs/artificial-intelligence/llama2-lora/src/LLAMA_2_Fine_Tuning_with_LoRA.ipynb
+++ b/blogs/artificial-intelligence/llama2-lora/src/LLAMA_2_Fine_Tuning_with_LoRA.ipynb
@@ -77,11 +77,13 @@
     "This example leverages two GCDs (Graphics Compute Dies) of a AMD MI250 GPU and each GCD are equipped with 64 GB of VRAM. Using this setup allows us to explore different settings for fine-tuning the Llama 2–7b weights with and without LoRA.\n",
     "\n",
     "Our setup:\n",
-    "- Hardware: AMD Instinct MI250\n",
-    "- Software:\n",
-    "  * [ROCm 5.7.0+](https://rocm.docs.amd.com/projects/install-on-linux/en/latest/)\n",
+    "* Hardware: AMD Instinct MI250\n",
+    "* Software:\n",
+    "  * [ROCm 6.1.0+](https://rocm.docs.amd.com/projects/install-on-linux/en/latest/)\n",
     "  * [Pytorch 2.0.1+](https://rocm.docs.amd.com/projects/install-on-linux/en/latest/how-to/3rd-party/pytorch-install.html#installing-pytorch-for-rocm)\n",
-    "- Libraries: transformers, accelerate, peft, trl, scipy, and bitsandbytes"
+    "* Libraries: `transformers`, `accelerate`, `peft`, `trl`, `bitsandbytes`, `scipy`\n",
+    "\n",
+    "In this blog, we conducted our experiment using a single MI250GPU with the Docker image [rocm/pytorch:rocm6.1_ubuntu22.04_py3.10_pytorch_2.1.2](https://hub.docker.com/layers/rocm/pytorch/rocm6.1_ubuntu22.04_py3.10_pytorch_2.1.2/images/sha256-f6ea7cee8aae299c7f6368187df7beed29928850c3929c81e6f24b34271d652b?context=explore)."
    ]
   },
   {
@@ -165,13 +167,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* For ROCm 5.7"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -181,50 +176,21 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "## Install/update `hipBLASLt`. This step takes around half an hour.\n",
-    "git clone --recurse https://github.com/ROCm/hipBLASLt\n",
-    "cd hipBLASLt\n",
-    "git checkout 4b3b34405e7e25cff404f69bfd0a832644430477\n",
-    "./install.sh -idc\n",
-    "\n",
-    "cd ..\n",
-    "pip install einops lion_pytorch\n",
-    "\n",
-    "# Install `bitsandbytes`\n",
-    "git clone --recurse https://github.com/ROCm/bitsandbytes.git\n",
-    "cd bitsandbytes\n",
-    "git checkout rocm5.7_internal_testing\n",
-    "make hip\n",
-    "python setup.py install"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* For ROCm 6.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "# Install `bitsandbytes`\n",
-    "git clone --recurse https://github.com/ROCm/bitsandbytes.git\n",
+    "git clone --recurse https://github.com/ROCm/bitsandbytes\n",
     "cd bitsandbytes\n",
     "git checkout rocm_enabled\n",
-    "make hip\n",
-    "python setup.py install"
+    "pip install -r requirements-dev.txt\n",
+    "cmake -DCOMPUTE_BACKEND=hip -S . #Use -DBNB_ROCM_ARCH=\"gfx90a;gfx942\" to target specific gpu arch\n",
+    "make\n",
+    "pip install ."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Check the bitsandbytes version (0.42.0)."
+    "2. Check the bitsandbytes version.\n",
+    "At the time of writing this blog, the version is 0.43.0."
    ]
   },
   {
