--- a/blogs/artificial-intelligence/llama2-Qlora/src/LLAMA_2_Fine_Tuning_with_QLoRA.ipynb
+++ b/blogs/artificial-intelligence/llama2-Qlora/src/LLAMA_2_Fine_Tuning_with_QLoRA.ipynb
@@ -47,8 +47,7 @@
     "  * [Pytorch for ROCm 2.0+](https://rocm.docs.amd.com/projects/install-on-linux/en/latest/how-to/3rd-party/pytorch-install.html)\n",
     "* Libraries: `transformers`, `accelerate`, `peft`, `trl`, `bitsandbytes`, `scipy`\n",
     "\n",
-    "In this blog, we conducted our experiment using a single MI250GPU with the Docker image [rocm/pytorch:rocm6.1_ubuntu20.04_py3.9_pytorch_2.1.2\n",
-    "](https://hub.docker.com/layers/rocm/pytorch/rocm6.1_ubuntu20.04_py3.9_pytorch_2.1.2/images/sha256-96ba7b33bc7fa37b88c5ed550488960dd1dcedabaa8a9c17a4fd62e6c50e7574?context=explore)."
+    "In this blog, we conducted our experiment using a single MI250GPU with the Docker image [rocm/pytorch:rocm6.1.2_ubuntu22.04_py3.10_pytorch_release-2.1.2](https://hub.docker.com/layers/rocm/pytorch/rocm6.1.2_ubuntu22.04_py3.10_pytorch_release-2.1.2/images/sha256-c8b4e8dfcc64e9bf68bf1b38a16fbc5d65b653ec600f98d3290f66e16c8b6078?context=explore)."
    ]
   },
   {
