revamp vllm blog

--- a/blogs/artificial-intelligence/vllm/src/vLLM.ipynb
+++ b/blogs/artificial-intelligence/vllm/src/vLLM.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = LLM(model=\"mistralai/Mistral-7B-v0.1\")"
+    "llm = LLM(model=\"Qwen/Qwen2-7B-Instruct\")"
    ]
   },
   {
