Sync Develop and Release

--- a/blogs/artificial-intelligence/langchain-chatbot/src/langchain.ipynb
+++ b/blogs/artificial-intelligence/langchain-chatbot/src/langchain.ipynb
@@ -7,23 +7,14 @@
    "outputs": [],
    "source": [
     "# install required libraries \n",
-    "! pip install langchain faiss-cpu transformers sentence-transformers PyPDF2 "
+    "! pip install langchain langchain-community faiss-cpu transformers sentence-transformers PyPDF2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/huggingface_hub/utils/_deprecation.py:131: FutureWarning: 'InferenceApi' (from 'huggingface_hub.inference_api') is deprecated and will be removed from version '1.0'. `InferenceApi` client is deprecated in favor of the more feature-complete `InferenceClient`. Check out this guide to learn how to convert your script to use it: https://huggingface.co/docs/huggingface_hub/guides/inference#legacy-inferenceapi-client.\n",
-      "  warnings.warn(warning_message, FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os \n",
     "from langchain import HuggingFaceHub, LLMChain\n",
@@ -31,13 +22,13 @@
     "\n",
     "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"your Huggingface API Token here\"\n",
     "\n",
-    "llm = HuggingFaceHub(repo_id=\"google/flan-t5-xxl\",model_kwargs={'temperature':0.5,\n",
+    "llm = HuggingFaceHub(repo_id=\"google/flan-t5-large\",model_kwargs={'temperature':0.5,\n",
     "                                                               'max_length': 512})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Quito is the capital of Ecuador. Quito is the largest city in Ecuador. The answer: Quito.'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "question =  \"What is the capital of Ecuador? \"\n",
     "llm_chain.run(question)"
@@ -71,20 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The LLM program at Cornell University offers a unique opportunity to study law in a small, close-knit community of scholars. The program is designed to provide a small group of students with close ties to the faculty and to Cornell University.'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "question =  \"what are some key advantages of LoRA for LLM? \"\n",
     "llm_chain.run(question)"
@@ -92,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,20 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'makes training more efficient and lowers the hardware barrier to entry by up to 3 times when using adaptive optimizers since we do not need to calculate the gradients or cantly fewer GPUs and avoid I/O bottlenecks. Another benefit is that we can switch between tasks while deployed at a much lower cost by only swapping the LoRA weights as opposed to all the'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.chains.question_answering import load_qa_chain\n",
     "# loading Q&A chain\n",
@@ -189,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
